assets/sass/partials/_main.scss
/* ... */
@media (max-width: 835px) {
	#yoast-after-header-container,
	#yoast-after-header-fp-container,
	#yoast-tagline-after-header-container {
		display: none;
		visibility: hidden;
	}
	.full-width-thumb {
		visibility: hidden;
		display: none;
	}

	.site-header {
		border: {
			bottom: {
				width: 1px;
				style: solid;
				color: $c_bodyTopLine;
			}
		}
	}
}

@media (max-width: 640px) {
	
	.site-container {
		border: {
			top: none;
		}
	}
	.content {
		width: 100%;
		max-width: $d_contentColumn;
	}

	.entry-content {
		.yst-archive-image-link {
			visibility: hidden;
			display: none;
		}
	}

	.content-sidebar,
	.sidebar-content {
		&.home,
		&.single {
			.content {
				max-width: 100%;
				margin-right: 0;
			}
		}
	}
	.sidebar-primary {
		width: 100%;
		max-width: 100%;
	}
	.entry {
		padding: 0;
		margin: {
			top: 10px;
			left: 0;
			right: 0;
			bottom: 20px;
		}
	}
	.full-width-content.home .entry-content {
		width: 100%;
		float: none;
	}
	.thumb,
	.yst-frontpage-thumb,
	.yst-archive-thumb {
		display: none;
		visibility: hidden;
	}
	.breadcrumb {
		padding: {
			left: 1%;
			right: 1%;
			top: 15px;
			bottom: 5px;
		}
	}
	.content-sidebar,
	.sidebar-content {
		.sidebar-primary {
			width: 100%;
			padding: {
				left: 20px;
			}
			.widget {
				width: 100%;
			}
		}
	}
	.sidebar-content {
		.content {
			padding: 0 1%;
			margin-right: 0;
			max-width: 100%;
		}
		.sidebar-primary {
			padding: 0 1%;
		}
		aside {
			padding: 0 1%;
		}
	}
	.featured-content.featuredpost,
	.featured-content.featuredpage {
		img {
			float: left;
			margin: {
				right: 10px;
			}
		}
	}
	.site-inner {
		padding: 0;
	}
	#yoast-fullwidth-bottom-container {
		padding: 0 1%;
		#yoast-fullwidth-widgetarea-1,
		#yoast-fullwidth-widgetarea-2,
		#yoast-fullwidth-widgetarea-3 {
			margin: 0;
			padding: {
				bottom: 1em;
			}
			float: none;
			width: 100%;
			max-width: 100%;
		}
	}
	.footer-widgets {
		padding: {
			left: 1%;
			right: 1%;
		}
		.widget-area {
			width: 100%;
			&.footer-widgets-2,
			&.footer-widgets-3 {
				margin: 0;
			}
		}

	}
	.full-width-content {
		#yoast-fullwidth-bottom-container {
			.yoast-fullwidth-widget {
				section {
					width: 100%;
				}
			}
		}
		.footer-widgets {
			width: 100%;
			.widget-area {
				width: 100%;
				&.footer-widgets-2 {
					margin: 0;
				}
			}
		}
	}
	.site-footer {
		text-align: center;
	}
	/**
 * Enter the mobile menu
 */
	body {
		border: 0;
		padding-top: 44px;
	}
	.nav-primary {
		display: none !important;
	}
	header {
		&.site-header {
			display: inline-block;
			text-indent: -10000px;
			z-index: 13;
			height: 44px;
			position: fixed;
			top: 0;
			width: 100%;
			.title-area,
			.header-widget-area {
				display: none;
				visibility: hidden;
			}
		}
	}
	a {
		&.open {
			display: inline-block;
			text-indent: -10000px;
			z-index: 13;
			width: 36px;
			height: 36px;
			line-height: 22px;
			padding: 10px;
			margin: 0;
		}
		&#sidr-left {
			float: left;
			margin: 2px 0;
			background: image-url($c_sprite) -36px 0 no-repeat;
			border: {
				right: {
					width: 2px;
					style: solid;
					color: $c_randLine;
				}
			}
		}
		&#sidr-right {
			float: right;
			margin: 2px 0;
			background: image-url($c_sprite) 0 0 no-repeat;
			border: {
				left: {
					width: 2px;
					style: solid;
					color: $c_randLine;
				}
			}
		}
	}
	body.sticky-menu {
		.site-container {
			a {
				&#sidr-left {
					position: relative;
					top: 0;
					left: 0;
				}
				&#sidr-right {
					position: relative;
					top: 0;
					right: 0;
				}
			}
		}
		.site-header {
			background-position: center top;
			.title-area {
				.site-title a {
					position: fixed;
					top: 0;
					margin: {
						left: 50px;
					}
				}
			}
		}
	}
	/* end mobile menu */
}

@media (max-width: 512px) {
	.sidebar-primary {
		.widget_bigbutton, form {
			max-width: 100%;
		}
	}
}

@media (max-width: 330px) {
	.entry {
		img {
			&.alignleft,
			&.alignright,
			&.aligncenter {
				display: block;
				float: none;
				margin: 1em auto;
			}
		}
	}
	.blog {
		&.sidebar-content {
			.content {
				width: 100%;
				padding: 0 1%;
				margin: 0;
			}
		}
		.entry-content {
			img.alignleft {
				margin: {
					left: 0;
				}
			}
			img.alignright {
				margin: {
					right: 0;
				}
			}
		}

	}
	.sidebar {
		.widget-wrap {
			li {
				&:after {
					content: "";
					padding: 0;
				}
			}
		}
		.featured-content {
			img {
				display: none;
				visibility: hidden;
			}
		}
	}
}

/**
 * WordPress Admin bar fixes for menu
 */

body.admin-bar {
	// why does WordPress have two heights for that!?
	.sidr,
	.site-header,
	.nav-primary {
		top: 32px;
		@media (max-width: 782px) {
			top: 46px;
		}
	}
}

body.sticky-menu.admin-bar {
	// why does WordPress have two heights for that!?
	.site-header,
	.nav-primary {
		top: 32px;
		@media (max-width: 782px) {
			top: 46px;
		}
	}
}

#wpadminbar {
	position: absolute !important;
	position: fixed !important;
}

